# Multi-Asset-Statistical-Arbitrage-Trading-System

ML_Driven_Equity_Statistical_Arbitrage_System/: README.md  pytest.ini  requirements.txt  run_cpp_tests.py  run_tests.bat  run_tests.py
ML_Driven_Equity_Statistical_Arbitrage_System/circleci/: config.yml
ML_Driven_Equity_Statistical_Arbitrage_System/k8s/: deployment.yaml
ML_Driven_Equity_Statistical_Arbitrage_System/notebooks/model_experimentation/: 01_ml_model_research.ipynb
ML_Driven_Equity_Statistical_Arbitrage_System/notebooks/research_notebooks/: 01_exploratory_data_analysis.ipynb  02_advanced_eda_research.ipynb
ML_Driven_Equity_Statistical_Arbitrage_System/notebooks/signal_development/: 01_alpha_signal_development.ipynb
ML_Driven_Equity_Statistical_Arbitrage_System/src/R/data_visualization/: plotting.R
ML_Driven_Equity_Statistical_Arbitrage_System/src/R/portfolio_optimization/: optimization.R
ML_Driven_Equity_Statistical_Arbitrage_System/src/R/statistical_analysis/: stat_models.R
ML_Driven_Equity_Statistical_Arbitrage_System/src/cpp/matching_engine/: MatchingEngine.cpp  MatchingEngine.h
ML_Driven_Equity_Statistical_Arbitrage_System/src/cpp/order_book/: OrderBook.cpp  OrderBook.h
ML_Driven_Equity_Statistical_Arbitrage_System/src/kdb+/feeds/: data_feed_handler.q
ML_Driven_Equity_Statistical_Arbitrage_System/src/kdb+/queries/: analytics.q
ML_Driven_Equity_Statistical_Arbitrage_System/src/kdb+/schema/: quotes.q  trades.q
ML_Driven_Equity_Statistical_Arbitrage_System/src/matlab/quantitative_methods/: quant_methods.m
ML_Driven_Equity_Statistical_Arbitrage_System/src/matlab/simulation/: market_sim.m
ML_Driven_Equity_Statistical_Arbitrage_System/src/python/alpha_signals/: __init__.py  feature_engineering.py  ml_models.py
ML_Driven_Equity_Statistical_Arbitrage_System/src/python/analytics/: performance_attribution.py
ML_Driven_Equity_Statistical_Arbitrage_System/src/python/backtesing/: backtester.py  live_trading_simulator.py
ML_Driven_Equity_Statistical_Arbitrage_System/src/python/data_ingestion/: alternative_data.py
ML_Driven_Equity_Statistical_Arbitrage_System/src/python/deep_learning/: transformer_models.py
ML_Driven_Equity_Statistical_Arbitrage_System/src/python/mlops/: model_pipeline.py
ML_Driven_Equity_Statistical_Arbitrage_System/src/python/risk_management/: advanced_risk.py  real_time_monitoring.py
ML_Driven_Equity_Statistical_Arbitrage_System/src/python/streaming/: kafka_consumer.py
ML_Driven_Equity_Statistical_Arbitrage_System/src/python/utils/: common.py
ML_Driven_Equity_Statistical_Arbitrage_System/src/tests/: conftest.py
ML_Driven_Equity_Statistical_Arbitrage_System/src/tests/R_tests/: README.md  run_r_tests.R  run_tests.bat  test_stat_models.R
ML_Driven_Equity_Statistical_Arbitrage_System/src/tests/cpp_tests/: CMakeLists.txt  Makefile  README.md  build.bat  test_order_book.cpp
ML_Driven_Equity_Statistical_Arbitrage_System/src/tests/python_tests/: README.md  test_ml_models.py  test_ml_models_integration.py
